# solverforge-bench

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  JOB_SHOP_SOLVERFORGE_AUDIT.md  Makefile  README.md  WIREFRAME.md  benchmark.example.toml  benchmark.nightly.example.toml  docs_jssp_proposal.md  pyproject.toml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
archive/: README.md  benchmark_meeting_scheduling.py  benchmark_vehicle_routing.py  report.md  results_meeting-scheduling.md  results_vehicle-routing.md
list-variable/cvrp/: Makefile
list-variable/cvrp/data/X/: X-n1001-k43.sol  X-n1001-k43.vrp  X-n101-k25.vrp  X-n106-k14.vrp  X-n110-k13.vrp  X-n115-k10.vrp  X-n120-k6.vrp  X-n125-k30.vrp  X-n129-k18.vrp  X-n134-k13.vrp  X-n139-k10.vrp  X-n143-k7.vrp  X-n148-k46.vrp  X-n153-k22.vrp  X-n157-k13.vrp  X-n162-k11.vrp  X-n167-k10.vrp  X-n172-k51.vrp  X-n176-k26.vrp  X-n181-k23.vrp  X-n186-k15.vrp  X-n190-k8.vrp  X-n195-k51.vrp  X-n209-k16.vrp  X-n214-k11.vrp  X-n219-k73.vrp  X-n223-k34.vrp  X-n228-k23.vrp  X-n233-k16.vrp  X-n237-k14.vrp  X-n242-k48.vrp  X-n251-k28.vrp  X-n256-k16.vrp  X-n261-k13.vrp  X-n266-k58.vrp  X-n270-k35.vrp  X-n275-k28.vrp  X-n280-k17.vrp  X-n284-k15.vrp  X-n289-k60.vrp  (+97 more)
list-variable/cvrp/scripts/: analyse_results.ipynb  run_benchmark.py  run_full_benchmark.sh  validate_all.py
list-variable/cvrp/src/cvrp_bench/: main.py  spec.py
list-variable/cvrp/src/cvrp_bench/domain/: utils.py
list-variable/cvrp/src/cvrp_bench/solver/: ortools.py  pyhygese.py  pyvrp.py  solver.py  solverforge.py  solverforge_py.py  timefold.py  timefold_java.py  vroom.py
list-variable/cvrp/src/cvrp_bench/solver/solverforge/: Cargo.toml  pyproject.toml  solver.toml
list-variable/cvrp/src/cvrp_bench/solver/solverforge/src/: constraints.rs  domain.rs  domain_tests.rs  lib.rs  lib_tests.rs
migrations/: 20260512000000_create_benchmark_results.sql  20260512001000_create_benchmark_result_views.sql  20260512002000_add_benchmark_run_status.sql  20260512003000_add_benchmark_run_nightly.sql  20260512004000_add_benchmark_logging.sql  20260514000000_add_solver_versions.sql  20260528000000_add_fair_start_witness.sql
scalar-variable/employee-scheduling/: Makefile
scalar-variable/employee-scheduling/data/inrc2/: manifest.json
scalar-variable/employee-scheduling/data/inrc2/n005w4/: Sc-n005w4.txt  WD-n005w4-0.txt  WD-n005w4-1.txt  WD-n005w4-2.txt  WD-n005w4-3.txt  WD-n005w4-4.txt  WD-n005w4-5.txt  WD-n005w4-6.txt  WD-n005w4-7.txt  WD-n005w4-8.txt  WD-n005w4-9.txt
scalar-variable/employee-scheduling/data/inrc2/n012w8/: Sc-n012w8.txt  WD-n012w8-0.txt  WD-n012w8-1.txt  WD-n012w8-2.txt  WD-n012w8-3.txt  WD-n012w8-4.txt  WD-n012w8-5.txt  WD-n012w8-6.txt  WD-n012w8-7.txt  WD-n012w8-8.txt  WD-n012w8-9.txt
scalar-variable/employee-scheduling/data/inrc2/n021w4/: WD-n021w4-0.txt  WD-n021w4-1.txt  WD-n021w4-2.txt  WD-n021w4-3.txt  WD-n021w4-4.txt  WD-n021w4-5.txt  WD-n021w4-6.txt  WD-n021w4-7.txt  WD-n021w4-8.txt  WD-n021w4-9.txt
scalar-variable/employee-scheduling/data/inrc2/n030w4/: H0-n030w4-0.txt  H0-n030w4-1.txt  H0-n030w4-2.txt  WD-n030w4-0.txt  WD-n030w4-1.txt  WD-n030w4-2.txt  WD-n030w4-3.txt  WD-n030w4-4.txt  WD-n030w4-5.txt  WD-n030w4-6.txt  WD-n030w4-7.txt  WD-n030w4-8.txt  WD-n030w4-9.txt
scalar-variable/employee-scheduling/data/inrc2/n030w8/: H0-n030w8-0.txt  H0-n030w8-1.txt  H0-n030w8-2.txt  Sc-n030w8.txt  WD-n030w8-0.txt  WD-n030w8-1.txt  WD-n030w8-2.txt  WD-n030w8-3.txt  WD-n030w8-4.txt  WD-n030w8-5.txt  WD-n030w8-6.txt  WD-n030w8-7.txt  WD-n030w8-8.txt  WD-n030w8-9.txt
scalar-variable/employee-scheduling/data/inrc2/n035w4/: WD-n035w4-0.txt  WD-n035w4-1.txt  WD-n035w4-2.txt  WD-n035w4-3.txt  WD-n035w4-4.txt  WD-n035w4-5.txt  WD-n035w4-6.txt  WD-n035w4-7.txt  WD-n035w4-8.txt  WD-n035w4-9.txt
scalar-variable/employee-scheduling/data/inrc2/n035w8/: WD-n035w8-0.txt  WD-n035w8-1.txt  WD-n035w8-2.txt  WD-n035w8-3.txt  WD-n035w8-4.txt  WD-n035w8-5.txt  WD-n035w8-6.txt  WD-n035w8-7.txt  WD-n035w8-8.txt  WD-n035w8-9.txt
scalar-variable/employee-scheduling/data/inrc2/n040w4/: H0-n040w4-0.txt  (+12 more)
scalar-variable/employee-scheduling/scripts/: run_benchmark.py  validate_all.py  verify_model_parity.py
scalar-variable/employee-scheduling/src/employee_scheduling_bench/: loader.py  spec.py  validation.py
scalar-variable/employee-scheduling/src/employee_scheduling_bench/solver/ortools/: CMakeLists.txt  __init__.py  main.cc
scalar-variable/employee-scheduling/src/employee_scheduling_bench/solver/solverforge_nrp/: Cargo.toml  pyproject.toml  solver.toml
scalar-variable/employee-scheduling/src/employee_scheduling_bench/solver/solverforge_nrp/src/: constraints.rs  domain.rs  lib.rs  solver.rs
scalar-variable/job-shop-scheduling/: Makefile
scalar-variable/job-shop-scheduling/data/jsplib/: la02.txt  manifest.json  ta01.txt  ta02.txt  ta03.txt  ta04.txt  ta05.txt  ta06.txt  ta07.txt  ta08.txt  ta09.txt  ta10.txt  ta11.txt  ta12.txt  ta13.txt  ta14.txt  ta15.txt  ta16.txt  ta17.txt  ta18.txt  ta19.txt  ta20.txt  ta21.txt  ta22.txt  ta23.txt  ta24.txt  ta25.txt  ta26.txt  ta27.txt  ta28.txt  ta29.txt  ta30.txt  ta31.txt  ta32.txt  ta33.txt  ta34.txt  ta35.txt  ta36.txt  ta37.txt  ta38.txt  (+41 more)
scalar-variable/job-shop-scheduling/scripts/: validate_all.py
scalar-variable/job-shop-scheduling/src/job_shop_bench/: __init__.py  loader.py  spec.py  validation.py
scalar-variable/job-shop-scheduling/src/job_shop_bench/solver/solverforge_jssp/: Cargo.toml  pyproject.toml  solver.toml
scalar-variable/job-shop-scheduling/src/job_shop_bench/solver/solverforge_jssp/src/: constraints.rs  domain.rs  lib.rs
scripts/: _venv_bootstrap.py  normalize_results.py  run_benchmark.py  test_verify_solverforge_py_guardrails.py  verify_fair_start.py  verify_solverforge_config_parity.py  verify_solverforge_py_guardrails.py  verify_stock_solverforge_guardrails.py
src/solverforge_bench/: __init__.py  cli.py  config.py  csv.py  etl.py  execution.py  fair_start.py  logging.py  model.py  postgres.py  redaction.py  registry.py  runner.py  solver_versions.py  solverforge_config.py  validation.py
(+283 files in other folders)
