[package]
name = "solverforge-nrp"
version = "0.1.0"
edition = "2021"
description = "SolverForge INRC-II nurse rostering solver for benchmark comparison"
publish = false

[lib]
name = "solverforge_nrp"
crate-type = ["cdylib"]

[dependencies]
solverforge = { version = "0.19.0", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt", "time"] }
rand = "0.9"
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
